data/derived/sp14/progs/unify/prog1712.ml.out
Characters 153-154:
  let (_, res) = List.fold_left f base args in res
                                ^
Error: This expression has type 'a list -> 'a -> int * 'a list
       but an expression was expected of type 'a list -> 'a -> 'a list
       Type int * 'a list is not compatible with type 'a list 
